--- a/ios/gympointMobile/Info.plist
+++ b/ios/gympointMobile/Info.plist
@@ -55,7 +55,13 @@
 	<false/>
   <key>UIAppFonts</key>
 <array>
+<string>FontAwesome.ttf</string>
+  <string>FontAwesome5_Brands.ttf</string>
+  <string>FontAwesome5_Regular.ttf</string>
+  <string>FontAwesome5_Solid.ttf</string>
+  <string>Foundation.ttf</string>
+  <string>Ionicons.ttf</string>
   <string>MaterialIcons.ttf</string>
-</array>
+  <string>MaterialCommunityIcons.ttf</string></array>
 </dict>
 </plist>
